samples/_failures_safe/1761378557_d795cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f97b49d.c: In function ‘main’:
./samples/SAFE/__tmp_8f97b49d.c:117:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  117 |     Matrix mat
      |     ^~~~~~
./samples/SAFE/__tmp_8f97b49d.c:117:5: error: expected declaration or statement at end of input
